<resources>
    <string name="app_name">DiscographyApp</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_internet">No internet</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="made_by">Made by</string>
    <string name="footerText">Valečić -</string>
    <string name="authorName">Kristian Valečić</string>
    <string name="deleted_item">Deleted item</string>
    <string name="artist_match">Match to searched band = </string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="listeners">Listeners:</string>
    <string name="playcount">Playcount:</string>
    <string name="loading_artist_info">Loading artist info…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank FAVORITES fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="account_created">Account created</string>
    <string name="reg_error">Registration error!</string>
    <string name="logged_in">Logged in</string>
    <string name="loggin_error">Loggin error!</string>
    <string name="logout">Logout</string>
    <string name="you_must_be_logged_in_to_see_or_add_favorites">You must be logged in to see or add favorites</string>
    <string name="added_to_fav">Added to favorites</string>
    <string name="removed_from_fav">Removed from favorites</string>
    <string name="app">App</string>
    <string name="about_text">Software engineering student, studying at Algebra university, Croatia. Learning to write good code and make good apps. This application was made for a class in android and kotlin programing. The whole app is written in Kotlin. The assignment was to make an app that pulls data from an API, I chose the last.fm api for pulling discography data. I wanted the app to look good so I sketched up a design in figma and this is the end result. I\'m happy how it turned out.</string>
    <string name="album_name">album name</string>
    <string name="punk">punk</string>
    <string name="band_name">Band name</string>
</resources>