<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.RegisterFragment"
android:orientation="vertical"
android:padding="40dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="30dp"
    android:text="@string/login"
    android:textColor="@color/primary"
    android:textSize="@dimen/textHeading"
    android:textStyle="bold"
    tools:ignore="MissingConstraints" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:text=""
        android:textColor="@color/primaryLight"
        android:textColorHint="@color/primaryOpacity"
        android:textSize="@dimen/textRegularSize" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:text=""
        android:textColor="@color/primaryLight"
        android:textColorHint="@color/primaryOpacity"
        android:textSize="@dimen/textRegularSize"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary"
        android:layout_gravity="end"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:paddingVertical="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/textRegularSize"
        android:textStyle="bold" />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/AuthProgressBarSize"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="gone"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>